--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@
 #spring.datasource.password = sa
 #spring.datasource.driverClassName = org.h2.Driver
 
-spring.datasource.url = jdbc:h2:file:~/h2/app_db;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username = sa
-spring.datasource.password =
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.url = jdbc:h2:file:~/h2/app_db;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username = sa
+#spring.datasource.password =
+#spring.datasource.driverClassName = org.h2.Driver
+#spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.url=jdbc:h2:./topgrocery-data
+spring.jpa.hibernate.ddl-auto=update
