--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
