--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.datasource.url=jdbc:h2:./topgrocery-data
 spring.jpa.hibernate.ddl-auto=update
+database.file.name=topgrocery-data.mv.db
+gcp.bucket.name=topgrocery862.appspot.com
+gcp.storage.database.file.url=https://www.googleapis.com/download/storage/v1/b/topgrocery862.appspot.com/o/topgrocery-data.mv.db?alt=media
