--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-storage</artifactId>
 			<version>0.10.0-beta</version>
-			<!--<version>0.7.0</version>-->
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine.tools</groupId>
@@ -69,6 +68,7 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
+				<version>1.2.1</version>
 			</plugin>
 		</plugins>
 	</build>
